--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -181,7 +181,7 @@ The top-left to bottom-right diagonal corresponds to the examples in which the i
 The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Just as the external-only type, but unlike the unrestricted type and the internal-only type, these instances are not grammatical for this type of language.
 The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as the internal-only type, but unlike the unrestricted type and the external-only pattern, these instances are not grammatical for this type of language. The reasoning behind the ungrammaticality of these six cells is that the language allows neither the internal case nor the external case to surface when either of them wins the competition.
 
-On the surface, this pattern cannot be distinguished from a pattern that does not have case competition and does not allow for any case mismatches. I understand `a language with case competition' as a language that compares the internal and external case in its headless relatives. If the internal and external case are not compared in this type of language, it would be unclear why the diagonal is different from all the other cells. The source of ungrammaticality for the cells in Table \ref{tbl:case-competition-none} can only come from the comparing the internal and external case and concluding that the internal case and the external case differ. The grammaticality of the diagonal follows from the conclusion that the internal and the external case match. In Chapter \ref{sec:without-case-competition} I discuss languages without case competition, in which the internal and external case are not compared to each other.
+On the surface, this pattern cannot be distinguished from a pattern that does not have case competition and does not allow for any case mismatches. I understand `a language with case competition' as a language that compares the internal and external case in its headless relatives. If the internal and external case are not compared in this type of language, it would be unclear why the diagonal is different from all the other cells. The source of ungrammaticality for the cells in Table \ref{tbl:case-competition-none} can only come from the comparing the internal and external case and concluding that the internal case and the external case differ. The grammaticality of the diagonal follows from the conclusion that the internal and the external case match. In Chapter \ref{ch:without-case-competition} I discuss languages without case competition, in which the internal and external case are not compared to each other.
 
 In this chapter I show that three of the four patterns I introduced are attested crosslinguistically. Section \ref{sec:pattern-i} shows that the unrestricted type, in which either the internal case or the external case can surface, is exemplified by Gothic (repeated from Chapter \ref{ch:recurring}) and by Old High German. The internal-only type, in which only the internal case can surface, is illustrated by Modern German in Section \ref{sec:pattern-ii}. To my knowledge, there is no language in which only the external case can surface when it wins the case competition. This is discussed in \ref{sec:pattern-iii}. Section \ref{sec:pattern-iv} shows a language that only allows the case to surface when there is a tie, i.e. when the internal and external case match, namely Polish.
 
@@ -631,7 +631,7 @@ This example is ungrammatical: although the internal case is more complex, the r
  2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rp}.\ac{an}.\ac{nom} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-u}
 
-Now I turn to the situation in which the external case wins the competition, and there is no grammatical outcome possible, whichever case the relative pronoun appears in.
+Now I turn to the situation in which according to the case scale, the external case would win the competition. However, there is no grammatical outcome possible, whichever case the relative pronoun appears in.
 Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal nominative case competes against the external accusative case.
 The internal case is nominative, as the predicate \tit{sein} `be' takes nominative subjects.
 The external case is accusative, as the predicate \tit{einladen} `invite' takes accusative objects.
@@ -717,7 +717,7 @@ This example is ungrammatical: although the internal case is more complex, the r
 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rp}.\ac{an}.\ac{nom} Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
 `Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat-u}
 
-Now I turn again to the situation in which the external case wins the competition, and there is no grammatical outcome possible, whichever case the relative pronoun appears in.
+Now I turn again to the situation in which according to the case scale, the external case would win the competition. However, there is no grammatical outcome possible, whichever case the relative pronoun appears in.
 Consider the example in \ref{ex:mg-dat-nom}. In this example, the internal nominative case competes against the external dative case.
 The internal case is nominative, as the predicate \tit{mögen} `like' takes nominative subjects.
 The external case is dative, as the predicate \tit{vertrauen} `trust' takes dative objects.
@@ -792,7 +792,7 @@ This example is ungrammatical: although the internal case is more complex, the r
 1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rp}.\ac{an}.\ac{acc} also Maria.\ac{nom} trust.\ac{pres}.3\ac{sg}\scsub{[dat]}\\
 `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
 
-Now I turn again to the situation in which the external case wins the competition, and there is no grammatical outcome possible, whichever case the relative pronoun appears in.
+Now I turn again to the situation in which according to the case scale, the external case would win the competition. However, there is no grammatical outcome possible, whichever case the relative pronoun appears in.
 Consider the example in \ref{ex:mg-dat-acc}. In this example, the internal accusative case competes against the external dative case.
 The internal case is accusative, as the predicate \tit{mögen} `like' takes accusative objects.
 The external case is dative, as the predicate \tit{vertrauen} `trust' takes dative objects.
@@ -880,8 +880,6 @@ like.1\tsc{sg}\scsub{[ela]} \ac{rp}.\ac{inan}.\ac{ptv} 2\tsc{sg} choose.2\tsc{sg
 
 I leave it for future research to find out whether other case combinations in Finnish show the same pattern.
 }
-
-
 
 \section{The external-only type of language}\label{sec:pattern-iii}
 
