--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -100,10 +100,10 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
 Consider first the situation in which the internal and the external case match. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained in the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) does not make a difference for whether or not the light head can be deleted. It can in both cases.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same phi feature morpheme, a case morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Consider now the situation in the internal case would win the case competition. The light head consists of a phi feature morpheme and a case feature morpheme. The relative pronoun consists of the same phi feature morpheme, a case morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) makes crucial difference for whether or not the light head can be deleted. It can when there is a phi and case feature portmanteau and it cannot when there are two separate morphemes for the features.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi feature morpheme, a case feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case would win the case competition. The relative pronoun consists of a phi feature morpheme, a case feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 In this situation, whether there is a phi and case feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) does not make a difference for whether or not the light head or the relative pronoun can be deleted. It cannot in both cases.
 
 In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching type. In this chapter, I show that Polish light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-matching-simple}. I give a compact version of the internal syntax of Polish light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
@@ -373,7 +373,7 @@ I do not discuss the feature content that distinguishes \tit{jemu}, \tit{niemu} 
 Following the functional sequence I suggested in Chapter \ref{ch:deriving-onlyinternal}, all forms contain the feature \tsc{cl} for inanimate/neuter gender, \tsc{an} for animate/masculine gender and \tsc{ind} for singular number and case features up to the dative.
 
 The forms \tit{jemu}, \tit{niemu} and \tit{temu} are syncretic between the masculine and the neuter. This can be captured if the highest feature in the lexical tree is the feature that distinguishes masculine and neuter gender.
-This distinguishing feature is the feature \tsc{an} \citep{harley2002}, which is not the the highest feature in \ref{ex:pol-mu-dat-fseq}. Fortunately, different from \tit{jullie}, \tit{jemu}, \tit{niemu} and \tit{temu} are bimorphemic: they contain morphemes \tit{je}, \tit{nie} or \tit{te} and the morpheme \tit{mu}. The highest feature of one of the two morphemes needs to be the feature \tsc{an}.
+This distinguishing feature is the feature \tsc{an} \citep{harley2002}, which is not the highest feature in \ref{ex:pol-mu-dat-fseq}. Fortunately, different from \tit{jullie}, \tit{jemu}, \tit{niemu} and \tit{temu} are bimorphemic: they contain morphemes \tit{je}, \tit{nie} or \tit{te} and the morpheme \tit{mu}. The highest feature of one of the two morphemes needs to be the feature \tsc{an}.
 I suggest that this is the case for \tit{je}, \tit{nie} and \tit{te} is \tsc{an}, as shown in \ref{ex:pol-entry-nie/je/te}.
 
 \ex. \label{ex:pol-entry-nie/je/te}
@@ -479,7 +479,7 @@ This leaves the two morphemes \tit{k} and \tit{o}. First I discuss the \tit{o}.
 This morpheme corresponds to what I called the phi feature morpheme in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter.
 I show that this morpheme corresponds to pronominal features and gender features.
 
-First I show that the \tit{o} does not only appear in animate relative pronouns, but also in the inanimate relative pronoun and even in other pronouns. I go through this rather long reasoning to show that \tit{o} is present in enviroments, even though it does not surface.
+First I show that the \tit{o} does not only appear in animate relative pronouns, but also in the inanimate relative pronoun and even in other pronouns. I go through this rather long reasoning to show that \tit{o} is present in environments, even though it does not surface.
 Consider the relative pronouns in Table \ref{tbl:pol-rps}.
 
 \begin{table}[htbp]
@@ -526,11 +526,9 @@ The \tit{k} in \ref{ex:pol-gdzie} gets voiced into \tit{g} because it is followe
  where\\\label{ex:pol-gdzie}
  \flushfill{Polish, \pgcitealt{swan2002}{180,183,184}}
 
-Moreover, \tit{cz} is not a primary consonant in Polish but a derived one \pgcitep{swan2002}{23}. The consonants \tit{cz} and \tit{c} are derived from \tit{k}.
+Moreover, according to \pgcitet{swan2002}{23} \tit{cz} is not a primary consonant in Polish but a derived one, and the consonants \tit{cz} and \tit{c} are derived from \tit{k}.
 
-I propose that the \tit{k} is underlyingly present in the inanimate relative pronouns. They appear as a consequence of being combined with an \tit{i}.\footnote{
-In this dissertation I do not discuss the exact feature content that corresponds to \tit{i}. I assume it spells out features that have to do with being strong pronouns. For why the morpheme is not inserted in animate relative pronouns, see footnote \ref{ftn:inam-pointer} of this chapter.
-}
+I propose that the \tit{k} is underlyingly present in the inanimate relative pronouns. They appear as a consequence of being combined with an \tit{i}.
 I show the proposed decomposition in Table \ref{tbl:pol-rp-underl}.
 
 \begin{table}[htbp]
@@ -575,10 +573,12 @@ I put the underlying forms and the surface form side by side in Table \ref{tbl:p
 The sequence \tit{k-i-i} becomes \tit{czy} in the instrumental, and the sequence \tit{k-i-o} becomes \tit{cze} in the genitive and dative.\footnote{
 Under this analysis, the \tsc{wh}-element \tit{czyj} `whose' is underlyingly \tit{k-i-i-j}.
 }
-To get from the underlying form to the surface form, several phonological processes are taking place, which are all independently observed within Polish. I start with \tit{k} becoming \tit{c} when it precedes \tit{i}, as shown in \ref{ex:pol-phon-k+i}.
+To get from the underlying form to the surface form, several phonological processes are taking place, which are all independently observed within Polish. First I discuss the instrumental, in which \tit{k-i-i} becomes \tit{czy}.
+
+I start with the combination of /k/ and /i/ becoming /i/, as shown in \ref{ex:pol-phon-k+i}.
 
 \ex.\label{ex:pol-phon-k+i}
-/k/ → /c/ / \underline{\hspace{0.6cm}}/i/
+/k/ + /i/ → /c/
 
 Consider the paradigm for the singular of \tit{lampa} `light' and the singular of \tit{córka} `daugther' in Table \ref{tbl:pol-jk-to-c}.
 
@@ -602,73 +602,55 @@ Consider the paradigm for the singular of \tit{lampa} `light' and the singular o
 The stem and the suffixes are identical in both paradigms, except for in the dative.\footnote{
 There is also the change from /i/ to /y/ in the genitive of \tit{lampa}.
 }
-There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, the \tit{i}, has disappeared. Analyzing \tit{córc-e} as \tit{córk-i-e} brings back regularity in the paradigm.
+There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, the \tit{i}, has disappeared. Analyzing \tit{córc-e} as \tit{córk-i-e} brings back regularity in the paradigm. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{c-im}.
 
-Consider the forms after this first phonological change and the surface forms in Table \ref{tbl:pol-rps-change1-real}.
-
-\begin{table}[htbp]
-  \center
-  \caption{Polish inanimate relative pronouns (after change 1 + surface forms)}
-  \begin{tabular}[b]{ccc}
-    \toprule
-              & after change 1  & surface    \\
-    \cmidrule{2-3}
-    \tsc{nom} & c-i-o           &  c-o      \\
-    \tsc{acc} & c-i-o           &  c-o      \\
-    \tsc{gen} & c-i-o-go        &  cz-e-go  \\
-    \tsc{dat} & c-i-o-mu        &  cz-e-mu  \\
-    \tsc{ins} & c-i-i-m         &  cz-y-m   \\
-    \bottomrule
-  \end{tabular}
-  \label{tbl:pol-rps-change1-real}
-\end{table}
-
-I continue with the combination of \tit{c}, \tit{i} and \tit{i} becoming \tit{czy}, as shown in \ref{ex:pol-phon-c+i}.
+I continue with the combination of \tit{c} and \tit{i} becoming \tit{czy}, as shown in \ref{ex:pol-phon-c+i}.
 
 \ex.\label{ex:pol-phon-c+i}
-\a. /c/ + /i/ + /i/ → /czy/
+\a. /c/ + /i/ → /czy/
 
-Assuming that the two \tit{i}s merge into one, this change can be independently observed in \ref{ex:pol-waltz}.
+This change can be independently observed in \ref{ex:pol-waltz}.
 
 \exg. walc-ik: walczyk\\
 waltz-\tsc{dim} waltz.\tsc{dim}\\
 \flushfill{\pgcitealt{swan2002}{26}}\label{ex:pol-waltz}
 
-The noun \tit{walc} `waltz' combines with the diminutive marker \tit{ik}. The sequence \tit{c-ik} changes to \tit{czyk}.
+The noun \tit{walc} `waltz' combines with the diminutive marker \tit{ik}. The sequence \tit{c-ik} changes to \tit{czyk}. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{czym}.
 
-Consider the forms after this second phonological change and the surface forms in Table \ref{tbl:pol-rps-change2-real}.
+I repeat the table with the underlying and surface forms in Table \ref{tbl:pol-rps-underl-real-rep}. Compare the nominative and the accusative to the genitive and the dative.
 
 \begin{table}[htbp]
   \center
-  \caption{Polish inanimate relative pronouns (after change 2 + surface forms)}
+  \caption{Underlying and surface forms of Polish inanimate relative pronouns}
   \begin{tabular}[b]{ccc}
     \toprule
-              & after change 2  & surface    \\
+              & underlying  & surface    \\
     \cmidrule{2-3}
-    \tsc{nom} & c-i-o           &  c-o      \\
-    \tsc{acc} & c-i-o           &  c-o      \\
-    \tsc{gen} & c-i-o-go        &  cz-e-go  \\
-    \tsc{dat} & c-i-o-mu        &  cz-e-mu  \\
-    \tsc{ins} & cz-y-m          &  cz-y-m   \\
+    \tsc{nom} & k-i-o       &  c-o      \\
+    \tsc{acc} & k-i-o       &  c-o      \\
+    \tsc{gen} & k-i-o-go    &  cze-go  \\
+    \tsc{dat} & k-i-o-mu    &  cze-mu  \\
+    \tsc{ins} & k-i-i-m     &  czy-m   \\
     \bottomrule
   \end{tabular}
-  \label{tbl:pol-rps-change2-real}
+  \label{tbl:pol-rps-underl-real-rep}
 \end{table}
 
-The last phonological change is the combination of \tit{c}, \tit{i} and \tit{o} becoming \tit{cze} in the genitive and dative.\footnote{
-Note, however, that the \tit{co} in the nominative and the accusative does not become \tit{cze}. I assume that the \tit{o} in the nominative and accusative resists the process in \ref{ex:pol-phon-c+o}. This is because the \tit{o} in the nominative and accusative is morphologically and phonologically a `different' \tit{o} than the \tit{o} in the genitive and dative.
-Morphologically, the \tit{o} in the genitive and dative spells out different features than the \tit{o} in \tit{co}, such as nominative and accusative case, which in the case of the genitive and dative are realized by \tit{go} and \tit{mu}.
-Phonologically, this difference can be modeled by analyzing the \tit{o} in \tit{co} as an \tit{o} without a slot for a vowel and the \tit{o} in the genitive and dative as an \tit{o} plus a slot for a vowel. That is why in the case of \tit{co}, the \tit{i} has its influence on the \tit{k} (as described in \ref{ex:pol-phon-k+i}), and in the case of the \tit{o} in the genitive and dative, the \tit{i} has its influence on \tit{k} but also on the \tit{o}.
-}
+The sequence \tit{k-i-o} changes into \tit{co} in the nominative and accusative. The same \tit{k-i-o} sequence turns into \tit{cze} in the genitive and dative. This raises the question of how two identical sequences can lead to two different outcomes.
 
-\ex.\label{ex:pol-phon-c+o}
-\a. /c/ + /i/ + /o/ → /cze/
+I start by looking at the nominative and the accusative. Here only one phonological change seems to take place, which is the combination of \tit{k} and \tit{i} becoming \tit{c}, which I also showed for the instrumental. I repeat it in \ref{ex:pol-phon-k+i-rep}.
 
-I am not aware of an example that independently shows this change as a whole. However, there are examples that show the change step by step. That is, I have an example in which the combination of \tit{i} and \tit{o} becomes \tit{e}, and I have an example in which \tit{c} and \tit{e} become \tit{cze}. I give them in \ref{ex:pol-phon-c+o-steps}.
+\ex.\label{ex:pol-phon-k+i-rep}
+/k/ + /i/ → /c/
 
-\ex.\label{ex:pol-phon-c+o-steps}
-\a. /i/ + /o/ → /e/
-\b. /c/ + /e/ → /cze/
+Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{co}.
+
+Now consider the genitive and the dative. If here only the \tit{k} plus \tit{i} becomes \tit{c} change takes place, the result would \tit{c-o-go}/\tit{c-o-mu}, which is incorrect. The sequence \tit{c-o} should somehow still change into \tit{cze}. Now assume that in the genitive and the dative the \tit{i} would have `double effect', meaning that it also has an influence on the vowel \tit{o}. Before I discuss how the \tit{i} can sometimes have a `double effect' and sometimes `single effect', I show that the required phonological processes are attested in Polish.
+
+I start with the combination of \tit{i} and \tit{o} becoming \tit{e}, as shown in \ref{ex:pol-phon-i+o}.
+
+\ex.\label{ex:pol-phon-i+o}
+/i/ + /o/ → /e/
 
 Consider the paradigm for the singular of \tit{biurko} `desk' and the singular of \tit{słońce} `sun' in Table \ref{tbl:pol-io-to-e}.
 
@@ -689,7 +671,14 @@ Consider the paradigm for the singular of \tit{biurko} `desk' and the singular o
 \end{table}
 
 The stem and the suffixes are identical in both paradigms, except for in the nominative and the accusative.
-There, the suffix is \tit{o} on the stem \tit{biurk}, and the suffix is \tit{e} on the stem \tit{słońc}. Analyzing \tit{słońc-e} as \tit{słońc-i-o} brings back regularity in the paradigm.
+There, the suffix is \tit{o} on the stem \tit{biurk}, and the suffix is \tit{e} on the stem \tit{słońc}. Remember that the \tit{c} is not a primary consonant in Polish \pgcitep{swan2002}{23} and that it is possibly derived from a combination of \tit{k} and \tit{i} (see \ref{ex:pol-phon-k+i-rep}).
+Analyzing \tit{słońc-e} as \tit{słońk-i-o} brings back regularity in the paradigm.
+Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{c-e-go}/\tit{c-e-mu}.
+
+I continue with the change in which the combination of \tit{c} and \tit{e} become \tit{cze}, as shown in \ref{ex:pol-phon-ce}.
+
+\ex.\label{ex:pol-phon-ce}
+/c/ + /e/ → /cze/
 
 I give the example in which the combination of \tit{c} and \tit{e} results in \tit{cze} in \ref{ex:pol-father}.
 
@@ -697,9 +686,15 @@ I give the example in which the combination of \tit{c} and \tit{e} results in \t
  father-\tsc{voc} father.\tsc{voc}\\
 \flushfill{\pgcitealt{swan2002}{26}}\label{ex:pol-father}
 
-The noun \tit{ojc} `father' combines with the vocative marker \tit{e}. The sequence \tit{c-e} changes to \tit{cze}.
+The noun \tit{ojc} `father' combines with the vocative marker \tit{e}. The sequence \tit{c-e} changes to \tit{cze}. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{cze-go}/\tit{cze-mu}.
 
-The conclusion I draw from this rather long reasoning is that the morpheme \tit{o} in \tit{kogo} and \tit{komu} is not specific to animate relative pronouns, but it also appears elsewhere, for instance in inanimate relative pronouns, demonstratives and in the \tit{ni}- and \tit{je}-pronouns, as shown in Table \ref{tbl:pol-o-everywhere}.
+It is crucial for the analysis that the \tit{i} in \tit{co} has a single effect, and it only affects the initial consonant. In the genitive and the dative there is a double effect, and both the initial consonant and the vowel are affected. I propose that this difference is not due to a difference in the \tit{i}, but a difference in the \tit{o}. Morphologically, the \tit{o} in the genitive and dative spells out different features than the \tit{o} in the nominative and the accusative, such as nominative and accusative case, which in the case of the genitive and dative are realized by \tit{go} and \tit{mu}. As the two forms are morphologically different, they have separate lexical entries, and they can correspond to different phonology. The phonological representation of the \tit{o} in the nominative and accusative should be such that it resists the effect of the \tit{i}, and the \tit{o} in the genitive and dative should welcome the effect of the \tit{i}. I do not work out a phonological proposal for how this works.\footnote{
+Maybe it is possible to analyze the \tit{o} in the nominative and accusative as an \tit{o} without a slot for a vowel and the \tit{o} in the genitive and dative as an \tit{o} plus a slot for a vowel.
+}
+
+The conclusion I draw from this rather long reasoning is that the morpheme \tit{o} in \tit{kogo} and \tit{komu} is not specific to animate relative pronouns, but it also appears elsewhere, for instance in inanimate relative pronouns, demonstratives and in the \tit{ni}- and \tit{je}-pronouns, as shown in Table \ref{tbl:pol-o-everywhere}.\footnote{
+In this dissertation I do not discuss the exact feature content that corresponds to \tit{i}. I assume it spells out features that have to do with being strong pronouns. See footnote \ref{ftn:inam-pointer} of this chapter for why the morpheme is not inserted in animate relative pronouns.
+}
 
 \begin{table}[htbp]
   \center
@@ -732,10 +727,13 @@ What these elements all have in common is that they are pronouns. Moreover, they
 
 Finally, I discuss morpheme \tit{k}. This morpheme corresponds to what I called the \tsc{rel}-feature in Chapter \ref{ch:the-basic-idea} and in the introduction to this chapter. I argue that this morpheme actually spells out the operator features \tsc{wh} and \tsc{rel} and number and gender features.
 
+Just as in Modern German, number and gender features are already spelled out once, this time by the suffixes \tit{go} and \tit{mu}. Again I assume that they are spelled out twice within the relative pronoun. They are semantically present twice, but their double presence is purely due to spellout reasons.
+
 I start with the operator features \tsc{wh} and \tsc{rel}. The Polish relative pronouns are \tsc{wh}-pronouns, and they are also used as interrogatives. Therefore, just as the Modern German \tit{we}, the Polish \tit{k} spells out the features \tsc{wh} and \tsc{rel}.
 
 Finally, since the relative pronouns do not have a morphological plural, I assume that \tit{k} contains the feature \tsc{ind}.
-Lastly, I assume that \tit{k} also contains the features \tsc{an} and \tsc{cl}. For this I do not have any independent support. I make this assumption to make room for the \tit{i} to be inserted in the inanimate.\footnote{\label{ftn:inam-pointer}
+Lastly, I assume that \tit{k} also contains the features \tsc{an} and \tsc{cl}. For this I do not have any independent support. \footnote{\label{ftn:inam-pointer}
+I make this assumption to make room for the \tit{i} to be inserted in the inanimate.
 To be able to derive the inanimate relative pronoun, I also assume that there is a pointer in the lexical entry for \tit{k}, as shown in \ref{ex:pol-entry-k-pointer}.
 
 \ex.\label{ex:pol-entry-k-pointer}
@@ -1139,7 +1137,14 @@ To summarize, I decomposed the relative pronoun into three morphemes: \tit{k}, \
 
 \section{The Polish extra light head}\label{sec:pol-elh}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is structurally contained in the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is contained in the other one.
+In Chapter \ref{ch:the-basic-idea}, I mentioned that languages have two possible light heads. I also noted that headless relatives in Polish (just like the ones in Modern German) can only be derived from light-headed relatives that are headed by one of these heads. In this section I give arguments that exclude the second light head as a possible light head.
+
+For Modern German, I discussed both possible light heads. I started by discussing a light-headed relative that is attested in Modern German. If the headless relative was derived from this light-headed relative, the deletion would have to be optional. I considered this scenario, and I gave two arguments against it.
+Then I took the light head from the existing light-headed relative as a point of departure, and I modified it in such a way that it is appropriate as a light head for a headless relative in Modern German. I argued that this light head is the head of the light-headed relative that Modern German headless relative are derived from. This light-headed relative does not exist in Modern German, so the deletion of the light head is obligatory.
+I do the same investigation for Polish, and I reach the same conclusion as I did for Modern German.
+
+In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
 
 \ex.\label{ex:pol-lh-complex}
 \begin{forest} boom
@@ -1163,7 +1168,6 @@ I have suggested that headless relatives are derived from light-headed relatives
   ]
 \end{forest}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that languages have two possible light heads. Headless relatives in Modern German can only be derived from light-headed relatives that are headed by one of these heads, namely the one in which the light head consists of the two features ϕ and \tsc{k}.
 In this section, I determine the exact feature content of the light head.
 As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I end up claiming that the phi and case features morpheme of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
 
@@ -1202,12 +1206,6 @@ As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I en
 \end{forest}
 \end{adjustbox}
 
-For Modern German, I considered two kinds of headless relatives as the potential source of the headless relative.
-The first possible scenario would be that the headless relative is derived from an existing light-headed relative, in which case the deletion of the light head would have to be optional.
-The second possible scenario would be that the headless relative is derived from a light-headed relative that does not surface, in which case the deletion of the light head would have to be obligatory.
-I consider the first scenario first, and I give two arguments against it.
-For Modern German I concluded it was the second, and I determined which features this extra light head should consist of. I do the same investigation for Polish, and I reach the same conclusion as I did for Modern German.
-
 Consider the existing Polish light-headed relative in \ref{ex:pol-light-headed}.
 
 \exg. Jan śpiewa to, co Maria śpiewa.\\
@@ -1224,27 +1222,13 @@ First, in headless relatives the morpheme \tit{kolwiek} `ever' can appear, as sh
 Jan sings \tsc{rp}.\tsc{an}.\tsc{acc} ever Maria sings\\
 `Jan sings everything Maria sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headless-ever}
 
-Light-headed relatives do not allow this morpheme to be inserted, illustrated in \ref{ex:pol-headed-ever}.
+Light-headed relatives do not allow this morpheme to be inserted, illustrated in \ref{ex:pol-headed-ever}.\footnote{
+\citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the demonstrative to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the demonstrative is that they are semantically incompatible.
+}
 
 \exg. *Jan śpiewa to, co -kolwiek Maria śpiewa.\\
 Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} ever Maria sings\\
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headed-ever}
-
-Just as for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
-\citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the demonstrative to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the demonstrative is that they are semantically incompatible.
-
-For concreteness, I assume \tit{ever} to be situated within the relative clause. Placing it in the main clause generates a different meaning, illustrated by the contrast in meaning between \ref{ex:cz-wh-ever} and \ref{ex:cz-ever-wh} in Czech.
-
-\ex.
-\ag. Sním, co -koliv mi uvaříš.\\
- eat.\tsc{1}sg what ever I.\tsc{dat} cook.2\tsc{sg}\\
- `I will eat whatever you will cook for me.'\label{ex:cz-wh-ever}
-\bg. Sním co -koliv, co mi uvaříš.\\
- eat.\tsc{1}sg what ever what I.\tsc{dat} cook.2\tsc{sg}\\
- `I will eat anything that you will cook for me.' \flushfill{Czech, \pgcitealt{simik2016}{115}}\label{ex:cz-ever-wh}
-
-\phantom{x}
-}
 
 The second argument against the existing light-headed relatives being the source of headless relatives comes from their interpretation. Headless relatives have two possible interpretations, and light-headed relatives have only one of these.
 just as in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
@@ -1724,7 +1708,9 @@ In other words, each feature and even each subconstituent of the extra light hea
 Recall from Section \ref{sec:comparing-mg} that this is the crucial example in which Modern German and Polish differ. The contrast lies in that the extra light head in Modern German corresponds to a single lexical entry and in Polish it corresponds to two lexical entries.
 In Modern German, extra light heads in a less complex case form a constituent that is structurally contained in the relative pronoun.
 In Polish, they do not.
-Relative pronouns in a complex case still contain all features of the extra light head in a less complex case, but the extra light head does not form a single constituent that is structurally contained in the relative pronoun. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. This shows the necessity of formulating the proposal in terms of containment as a single constituent.
+Relative pronouns in a complex case still contain all features of the extra light head in a less complex case, but the extra light head does not form a single constituent that is structurally contained in the relative pronoun. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. This shows the necessity of formulating the proposal in terms of containment as a single constituent.\footnote{
+A single constituent that the relative pronoun contains is the \tsc{an}P. This could be deleted, leaving the \tsc{acc}P, spelled out as \tit{go}. This structure would then be ruled out, because \tit{go} cannot be the head of a relative clause. The same holds for only deleting \tit{go} and leaving \tit{o} behind.
+}
 
 The relative pronoun is not a constituent that is structurally or formally contained in the light head. It lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
