--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -1015,3 +1015,37 @@
   location={Los Angeles},
   school={University of California}
 }
+
+@article{baunaz2018a,
+  title={Syncretisms with the nominal complementizer},
+  author={Baunaz, Lena and Lander, Eric},
+  journal={Studia Linguistica},
+  volume={72},
+  number={3},
+  pages={537--570},
+  year={2018},
+  doi={10.1111/stul.12076}
+}
+
+@article{weiss2016,
+  title={So welih wîb so wari: Zur Genese freier w-Relativsätze im Deutschen},
+  author={Weiß, Helmut},
+  editor={Neri, Sergio and Schuhmann, Roland and Zeilfelder, Susanne},
+  booktitle={"dat ih dir it nu bi huldi gibu": Linguistische, germanistische und indogermanistische Studien. Rosemarie Lühr gewidmet},
+  pages={505--515},
+  year={2016},
+  location={Wiesbaden},
+  publisher={Dr. Ludwig Reichert Verlag}
+}
+
+@incollection{vogel2001,
+  location = {Berlin},
+  title = {Case Conflict in German Free Relative Constructions: {{An}} Optimality Theoretic Treatment},
+  booktitle = {Competition in Syntax},
+  publisher = {{Mouton de Gruyter}},
+  author = {Vogel, Ralf},
+  editor = {Müller, Gereon and Sternefeld, Wolfgang},
+  year = {2001},
+  pages = {341--375},
+  doi = {10.1515/9783110829068.341}
+}
