--- a/introduction.tex
+++ b/introduction.tex
@@ -109,7 +109,7 @@ Part \ref{part:case-facts} of this dissertation discusses the first aspect that 
 
 A case more to the right on the scale wins over a case more to the left on the scale.
 
-The case scale in \ref{ex:case-scale-content} generates the pattern shown in Table \ref{tbl:case-competition-cases}. The left column shows the internal case (\ac{int}) between square brackets. The top row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The table shows three different instances of case competition and their winners: (1) when the accusative competes against the nominative, the accusative wins, and the relative pronoun appears in the accusative case; (2) when the dative competes against the the nominative, the dative wins, and the relative pronoun appears in the dative case; and (3) when the dative competes against the accusative, the dative wins, and the relative pronoun appears in the dative case.
+The case scale in \ref{ex:case-scale-content} generates the pattern shown in Table \ref{tbl:case-competition-cases}. The left column shows the internal case (\ac{int}) between square brackets. The top row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The table shows three different instances of case competition and their winners: (1) when the accusative competes against the nominative, the accusative wins, and the relative pronoun appears in the accusative case; (2) when the dative competes against the nominative, the dative wins, and the relative pronoun appears in the dative case; and (3) when the dative competes against the accusative, the dative wins, and the relative pronoun appears in the dative case.
 
 \begin{table}[ht]
   \center
@@ -149,7 +149,7 @@ Part \ref{part:variation} of this dissertation introduces the second aspect that
 There are four logically possible language types. The first possible type is one in which the internal and the external case are allowed to surface when either of them wins the case competition. Relative pronouns in the unmarked, light gray and dark gray cells are grammatical. I call this type the unrestricted type. The second possible type is one in which only the internal case is allowed to surface when it wins the case competition. Relative pronouns in the unmarked and light gray cells are grammatical but those in the dark gray cells are not. I call this type the internal-only type. The third possible type is one in which only the external case is allowed to surface when it wins the case competition. Relative pronouns in the unmarked and the dark gray cells are grammatical but those in the light gray cells are not. I call this type the external-only type. The fourth possible type is one in which neither the internal case nor in the external case is allowed to surface when either of them wins the case competition. Relative pronouns in the unmarked cells are grammatical, but those in the light and dark gray cells are not. I call this type the matching type.
 
 Chapter \ref{ch:typology} introduces these possible patterns in more detail and gives examples of them in different languages. As far as I am aware, only three of the possible language types are attested in natural languages. Gothic and Old High German are examples of the unrestricted type, Modern German is an example of the internal-only type \citep{vogel2001}, and Polish is an example of the matching type \citep{citko2013}. To my knowledge, the external-only type is not attested.
-Chapter \ref{sec:without-case-competition} takes a small detour and discusses languages that do not show any case competition. I present an overview of all logically possible patterns in headless relatives across languages, and I show which ones are attested.
+Chapter \ref{ch:without-case-competition} takes a small detour and discusses languages that do not show any case competition. I present an overview of all logically possible patterns in headless relatives across languages, and I show which ones are attested.
 
 In Part \ref{part:deriving} I focus again on the different language types that involve case competition. The goal of this part is to provide an account that generates the attested language types and excludes the non-attested one. Additionally, the variation between the language types should follow from properties that can be independently observed within a language of a particular language type.
 
@@ -160,8 +160,7 @@ I describe this basic setup of my proposal in Chapter \ref{ch:the-basic-idea}, a
 In Chapter \ref{ch:deriving-onlyinternal}, I motivate the analysis for the internal-only type of language Modern German. I first identify the morphemes that Modern German light heads and relative pronouns consist of. Then I show which features each of the morphemes correspond to. I illustrate that the lexical entries in Modern German are such that they lead Modern German to be an internal-only type of language.
 In Chapter \ref{ch:deriving-matching} and \ref{ch:deriving-unrestricted} I do the same for the two other attested language types. I show that Polish has lexical entries that ultimately lead it to be a matching type of language, and that Old High German has lexical entries that ultimately lead it to be an unrestricted type of language.
 Toward the end of the chapter I briefly sketch what I assume the larger syntactic structure of a headless relative looks like.
-
-Chapter \ref{ch:discussio} summarizes.
+Chapter \ref{ch:discussion} concludes.
 
 % \subsection{Case attraction}\label{sec:attraction}
 %
