--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Aside: languages without case competition}\label{sec:without-case-competition}
+\chapter{Aside: languages without case competition}\label{ch:without-case-competition}
 
 In the previous chapter, I discussed languages that show case competition in their headless relatives. These languages form the center of this dissertation, since the topic of the dissertation is case competition in headless relatives. However, there are also languages that do not show any case competition. In this chapter I take a small sidestep to discuss these languages, and gives a typology of headless relatives. Readers who are not interested in this detour can proceed directly to Part \ref{part:deriving}.
 
