--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[hidelinks,a4paper,oneside]{memoir}
 
-% \includeonly{languages-without-case-competition}
+% \includeonly{deriving-internalonly}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
@@ -20,31 +20,29 @@
 \center
 \Large
 
-CASE COMPETITION IN HEADLESS RELATIVES\\
+\phantom{x}
 
-\vspace{4em}
+\vspace{6em}
+
+{\Huge
+Case competition in headless relatives}\\
+
+\vspace{6em}
 
 Inauguraldissertation\\
-\vspace{1em}
 zur Erlangung des Grades eines Doktors der Philosophie\\
-\vspace{1em}
 im Fachbereich Neuere Philologien\\
-\vspace{1em}
 der Johann Wolfgang Goethe-Universität\\
-\vspace{1em}
 zu Frankfurt am Main\\
 
-\vspace{5em}
+\vspace{8em}
 
 vorgelegt von\\
-\vspace{1em}
 Fenna Bergsma\\
-\vspace{1em}
 aus\\
-\vspace{1em}
 Boarnsterhim, Niederlande\\
 
-\vspace{3em}
+\vspace{8em}
 
 2021
 
